panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__typeof__test_error_typeof_unqual_with_const_qualifier_is_const.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/typeof/test_error_typeof_unqual_with_const_qualifier_is_const.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: cannot assign to `const` value `this_is_const`
   ╭─[panko/tests/cases/execute/typeof/test_error_typeof_unqual_with_const_qualifier_is_const.c:5:5]
   │
 4 │     typeof_unqual(42) const this_is_const;
   │                             ──────┬──────  
   │                                   ╰──────── note: `this_is_const` declared here
 5 │     this_is_const = 42;
   │     ──────┬──────  
   │           ╰──────── this value is `const`
───╯
